unpackaged/main/default/objects/Research_Schedule_Email__c/fields/Schedule_Email_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Email_Time__c</fullName>
    <label>Schedule Email Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>01:00 AM</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>02:00 AM</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>03:00 AM</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>04:00 AM</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>05:00 AM</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>06:00 AM</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>07:00 AM</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>08:00 AM</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>09:00 AM</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10:00 AM</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11:00 AM</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12:00 PM</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>01:00 PM</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>02:00 PM</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>03:00 PM</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>04:00 PM</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>05:00 PM</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>06:00 PM</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>07:00 PM</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>08:00 PM</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>09:00 PM</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>10:00 PM</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>11:00 PM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>