unpackaged/main/default/objects/Research_Schedule_Email__c/fields/Total_Scheduled_Email__c.field-meta.xml
<CustomField>
    <fullName>Total_Scheduled_Email__c</fullName>
    <inlineHelpText>If it&apos;s value is 0 then it, means all the email successfully send.</inlineHelpText>
    <label>Total Scheduled Email</label>
    <summaryFilterItems>
        <field>Research_Schedule_Email_Participant__c.Schedule_Email_Status__c</field>
        <operation>equals</operation>
        <value>Schedule</value>
    </summaryFilterItems>
    <summaryForeignKey>Research_Schedule_Email_Participant__c.Research_Schedule_Email__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>