unpackaged/main/default/objects/Research_Schedule_Email__c/fields/UXR_Scout__c.field-meta.xml
<CustomField>
    <fullName>UXR_Scout__c</fullName>
    <label>UXR Scout</label>
    <referenceTo>Research_Project_Master__c</referenceTo>
    <relationshipLabel>Research Schedule Emails</relationshipLabel>
    <relationshipName>Research_Schedule_Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>